--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-  background-color: #f5f5dc; /* Light tan color */
+  background-color: #E6DFCE; /* Light tan color */
 }
 
 .tab-container {
