--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body {
 
     .event-date {
       display: block;
-      background-color: #007bff;
+      background-color:#000000;
       color: #fff;
       padding: 8px 12px;
       font-weight: bold;
